--- a/index.html
+++ b/index.html
@@ -60,13 +60,11 @@
       <div class="section__content">
         <div class="project DoctorWho">
             <figure class="project__pic">
-                <a href="/turtle-vs-rabbit">
                 <img src="images/turtle-vs-rabbit.gif" alt="Doctor Who Banner">
-                </a>
             </figure>
             <figcaption class="project__caption">
                 <div class="project__name">
-                <a href="/turtle-vs-rabbit">Turtle vs Rabbit</a>
+                <strong>Turtle vs Rabbit</strong>
                 </div>
                 <p>
                   Inspired by Aesop's timeless fable <em>The Tortoise and the Hare</em>, this game aims to be the successor to sokoban 
@@ -77,13 +75,11 @@
         </div>
         <div class="project Solys">
           <figure class="project__pic">
-            <a href="/noah-on-the-moon">
-              <img src="images/noah-on-the-moon.gif" alt="Solys Banner">
-            </a>
+            <img src="images/noah-on-the-moon.gif" alt="Solys Banner">
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
-              <a href="/noah-on-the-moon">Noah on the Moon</a>
+              <strong>Noah on the Moon</strong>
             </div>
             <p>Noah on the Moon, a remake of the <em>Ludum Dare</em> #45 winner <em>Lost in Translation</em>, was my first larger endeavor in <strong>Unity</strong>. 
               It's a <strong>language puzzle game</strong> that served as an educational exercise where I learned both how to use the engine and 
