--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="author" content="Lucas Nogueira">
 
   <link rel="stylesheet" href="css/main.css">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 
 <body>
@@ -19,7 +18,7 @@
       <h1 class="intro__hello">Olá!</h1>
       <div class="intro__wrap">
         <div class="circle-wrapper">
-            <img class="intro__icon" src="images/profile.jpeg" alt="Brand Icon" />
+            <img class="intro__icon" src="images/profile.jpeg"/>
         </div>
         <h2 class="intro__tagline">I'm
           <span class="name">Lucas Nogueira</span>, a hobbyist game developer with the dream of publishing my first commercial game.
@@ -58,9 +57,9 @@
     <section class="section featured-projects" data-sr>
       <div class="section__title">Projects</div>
       <div class="section__content">
-        <div class="project DoctorWho">
+        <div class="project">
             <figure class="project__pic">
-                <img src="images/turtle-vs-rabbit.gif" alt="Doctor Who Banner">
+                <img src="images/turtle-vs-rabbit.gif">
             </figure>
             <figcaption class="project__caption">
                 <div class="project__name">
@@ -73,9 +72,9 @@
                 </p>
             </figcaption>
         </div>
-        <div class="project Solys">
+        <div class="project">
           <figure class="project__pic">
-            <img src="images/noah-on-the-moon.gif" alt="Solys Banner">
+            <img src="images/noah-on-the-moon.gif">
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
@@ -86,9 +85,9 @@
               how to manage a more complex project.</p>
           </figcaption>
         </div>
-        <div class="project XDRM">
+        <div class="project">
             <figure class="project__pic">
-              <img src="images/battle-of-wizards.gif" alt="XDRM Banner">
+              <img src="images/battle-of-wizards.gif">
             </figure>
             <figcaption class="project__caption">
               <div class="project__name">
@@ -112,20 +111,17 @@
         <a href="mailto:lucas.fn@hotmail.com" target="_blank" title="email">
           <span class="text">email</span>
           <i class="fas fa-envelope"></i>
-          <img src="images/itchio.svg" alt="twitter"> </a>
+        </a>
         <a href="https://www.linkedin.com/in/lucas-nogueira-409018135/" target="_blank" title="linkedin">
           <span class="text">linkedin</span>
           <i class="fab fa-linkedin"></i>
-          <img src="images/itchio.svg" alt="twitter"> </a>
+        </a>
       </div>
     </footer>
 
     <button id="top-button" style="display: inline-block;">
       <img src="" alt=""> </button>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-  <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 
 </html>
