Add medium quality gifs

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="section__content">
         <div class="project">
             <figure class="project__pic">
-                <img src="images/turtle-vs-rabbit.gif">
+                <img src="images/turtle-vs-rabbit-medium-quality.gif">
             </figure>
             <figcaption class="project__caption">
                 <div class="project__name">
@@ -74,7 +74,7 @@
         </div>
         <div class="project">
           <figure class="project__pic">
-            <img src="images/noah-on-the-moon.gif">
+            <img src="images/noah-on-the-moon-medium-quality.gif">
           </figure>
           <figcaption class="project__caption">
             <div class="project__name">
